# AndroidDemo

./: .gitignore  LICENSE  README.md  build.gradle  import-summary.txt  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: litepal.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/animator/: guide_animator.xml  scale_percent_magnify_animation.xml
app/src/main/res/drawable/: arc_edge_rect_red_bg.xml  button_selector.xml  circle_accent_bg.xml  circle_gray_bg.xml  divider_padding_linear.xml  drawable_animation_petal_favorite_do.xml  drawable_animation_petal_favorite_undo.xml  drawable_default_selector.xml  ic_account_circle_black_48dp.xml  ic_account_circle_gray_48dp.xml  ic_account_circle_white_48dp.xml  ic_chevron_right_black_36dp.xml  ic_delete_forever_accent_24dp.xml  ic_delete_forever_gray_24dp.xml  ic_favorite_accent_24dp.xml  ic_favorite_black_18dp.xml  ic_favorite_white_24dp.xml  ic_gif_white_36dp.xml  ic_keyboard_voice_accent_24dp.xml  ic_keyboard_voice_gray_24dp.xml  ic_loyalty_white_24dp.xml  ic_mode_edit_black_24dp.xml  ic_play_arrow_accent_24dp.xml  ic_play_arrow_gray_24dp.xml  ic_star_theme_24dp.xml  ic_stop_accent_24dp.xml  ic_stop_gray_24dp.xml  separater.xml  shap_button.xml
app/src/main/res/drawable-mdpi/: cell_rectangle_16384.xml  cell_rectangle_32768.xml  cell_rectangle_4096.xml
app/src/main/res/layout/: activity_about_mito.xml  activity_audio_list.xml  activity_audio_record.xml  activity_basic_feature_detection.xml  activity_belle.xml  activity_board_detail.xml  activity_bookmark.xml  activity_collect.xml  activity_communication.xml  activity_constraint_layout_demo.xml  activity_content_provider.xml  activity_draw_image.xml  activity_draw_text.xml  activity_draw_view.xml  activity_dynamic_mito.xml  activity_dynamic_mito_play.xml  activity_ffmpeg.xml  activity_game.xml  (+78 more)
(+253 files in other folders)
